Fix z-index issue with top-content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15676,7 +15676,7 @@ html {
   position: relative;
   padding: 100px 0 100px 0;
   height: 300px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .svg-overlay {
